# qchem_workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: active_learning.md  analysis_workflows.md  api_stability.md  backend_adapters.md  campaign_workflows.md  ci.md  dashboard.md  developer_guide.md  electrochemistry.md  github_about.md  index.md  installation.md  microkinetics.md  parsers.md  property_parsing.md  qe_surface_workflows.md  quickstart.md  release_checklist.md  scientific_caveats.md  species_registry.md  v1_examples.md  v1_to_v2_migration.md
examples/basic_molecules/: README.md  report_example.md  species.yaml
examples/che_analysis/: README.md  che_pathway.yaml  results.json
examples/co2rr_molecular/: README.md  reaction_table_example.csv  report_example.md  species.yaml
examples/dashboard_demo/: README.md  active_learning_dataset.csv  adsorption_table.csv  campaign_state.json  qchem_project.yaml  reaction_table.csv  species.yaml
examples/gaussian_parsing/: README.md
examples/orca_parsing/: README.md
scripts/: validate_examples.py
tests/: test_active_learning.py  test_active_learning_bo_forge.py  test_active_learning_bo_forge_adapter.py  test_active_learning_candidates.py  test_active_learning_datasets.py  test_active_learning_objectives.py  test_active_learning_proposals.py  test_active_learning_report.py  test_active_learning_scoring.py  test_active_learning_state.py  test_adsorption.py  test_ase_adapter.py  test_ase_adsorption.py  test_ase_surface.py  test_backend_registry.py  test_calculation_models.py  test_campaign_manifest.py  test_che.py  test_cli.py  test_conformer_selection.py  test_convergence.py  test_corrections.py  test_dashboard.py  test_example_pathways.py  test_exports.py  test_gaussian_input.py  test_gaussian_parser.py  test_gaussian_scheduler.py  test_geometry.py  test_geometry_utils.py  test_import.py  test_job_model.py  test_markdown_report.py  test_materials_io.py  test_microkinetics_parameters.py  test_microkinetics_plotting.py  test_microkinetics_rate_analysis.py  test_microkinetics_rates.py  test_microkinetics_schema.py  test_microkinetics_sensitivity.py  (+31 more)
(+142 files in other folders)
