[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qchem-workbench"
version = "0.1.0"
description = "Backend-agnostic quantum-chemistry workflow manager."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "qchem-workbench contributors" }
]
dependencies = [
  "matplotlib>=3",
  "PyYAML>=6",
]

[project.optional-dependencies]
pyscf = [
  "pyscf>=2",
]

[project.scripts]
qchemwb = "qchem_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
