[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qchem-workbench"
version = "1.0.0"
description = "Backend-agnostic quantum-chemistry workflow manager."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Angze Li" }
]
dependencies = [
  "matplotlib>=3",
  "numpy>=1.23",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
pyscf = [
  "pyscf>=2",
]
rdkit = [
  "rdkit>=2023.9",
]

[project.scripts]
qchemwb = "qchem_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
