[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "qchem-workbench"
version = "2.0.0"
description = "Backend-agnostic quantum-chemistry workflow manager."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Angze Li" }
]
dependencies = [
  "matplotlib>=3",
  "numpy>=1.23",
  "PyYAML>=6",
]

[project.optional-dependencies]
ase = [
  "ase>=3.22",
]
dev = [
  "pytest",
  "ruff",
]
docs = [
  "mkdocs>=1.5",
]
pyscf = [
  "pyscf>=2",
]
rdkit = [
  "rdkit>=2023.9",
]
scipy = [
  "scipy>=1.10",
]

[project.scripts]
qchemwb = "qchem_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
